--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,7 +59,7 @@ install:
   - git submodule update --init libs/static_assert
   - git submodule update --init libs/throw_exception
   - git submodule update --init libs/utility
-  - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\config
+  - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\type_traits
   - bootstrap
   - b2 headers
 
