CI: add missing type_index dependency.

--- a/.travis.yml
+++ b/.travis.yml
@@ -442,6 +442,7 @@ install:
   - git submodule update --init libs/preprocessor
   - git submodule update --init libs/static_assert
   - git submodule update --init libs/throw_exception
+  - git submodule update --init libs/type_index
   - git submodule update --init libs/utility
   - cp -r $TRAVIS_BUILD_DIR/* libs/type_traits
   - ./bootstrap.sh
