CI: Add missing appveyor dependency.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,6 +59,7 @@ install:
   - git submodule update --init libs/throw_exception
   - git submodule update --init libs/type_index
   - git submodule update --init libs/utility
+  - git submodule update --init libs/functional
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\type_traits
   - bootstrap
   - b2 headers
