Define CI_SUPPRESS_KNOWN_ISSUES on Travis, suppress known g++-4 issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -584,7 +584,7 @@ script:
   - |-
     echo "using $TOOLSET : : $COMPILER : <cxxflags>-std=$CXXSTD ;" > ~/user-config.jam
   - (cd libs/config/test && ../../../b2 config_info_travis_install toolset=$TOOLSET && ./config_info_travis)
-  - ./b2 -j3 libs/type_traits/test toolset=$TOOLSET
+  - ./b2 -j3 libs/type_traits/test toolset=$TOOLSET define=CI_SUPPRESS_KNOWN_ISSUES
 
 notifications:
   email:
