--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,4 +71,4 @@ test_script:
   - ..\..\..\b2 config_info_travis_install %ARGS%
   - config_info_travis
   - cd ..\..\type_traits\test
-  - ..\..\..\b2 -j3 %ARGS%
+  - ..\..\..\b2 -j3 --hash %ARGS%
