--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,6 +60,7 @@ install:
   - git submodule update --init libs/type_index
   - git submodule update --init libs/utility
   - git submodule update --init libs/functional
+  - git submodule update --init libs/container_hash
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\type_traits
   - bootstrap
   - b2 headers
