--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,28 @@ matrix:
       env: TOOLSET=gcc COMPILER=g++ CXXSTD=03
 
     - os: linux
+      env: TOOLSET=intel COMPILER=icpc CXXSTD=03,11 TEST_INTEL=1
+      before_install:
+        - wget -q  'https://raw.githubusercontent.com/nemequ/icc-travis/master/install-icc.sh'
+        - bash ./install-icc.sh
+      after_script:
+        - '[[ ! -z "${INTEL_INSTALL_PATH}" ]] && uninstall_intel_software'
+
+    - os: linux
+      env: TOOLSET=intel COMPILER=icpc CXXSTD=11,14 TEST_INTEL=1 EXTRA_FLAGS=-gcc-name=g++-6
+      before_install:
+        - wget -q  'https://raw.githubusercontent.com/nemequ/icc-travis/master/install-icc.sh'
+        - bash ./install-icc.sh
+      after_script:
+        - '[[ ! -z "${INTEL_INSTALL_PATH}" ]] && uninstall_intel_software'
+      addons:
+        apt:
+          packages:
+            - g++-6
+          sources:
+            - ubuntu-toolchain-r-test
+
+    - os: linux
       compiler: g++-4.4
       env: TOOLSET=gcc COMPILER=g++-4.4 CXXSTD=98,0x
       addons:
@@ -274,6 +296,7 @@ install:
   - ./b2 headers
 
 script:
+  - if [ $TEST_INTEL ]; then source ~/.bashrc; fi
   - |-
     echo "using $TOOLSET : : $COMPILER ;" > ~/user-config.jam
   - IFS=','
