--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,12 @@ environment:
     - ARGS: --toolset=msvc-11.0 address-model=32
     - ARGS: --toolset=msvc-12.0 address-model=32
     - ARGS: --toolset=msvc-14.0 address-model=32
+    - ARGS: --toolset=msvc-12.0 address-model=32 cxxflags=-clr asynch-exceptions=on
+    - ARGS: --toolset=msvc-14.0 address-model=32 cxxflags=-clr asynch-exceptions=on
     - ARGS: --toolset=msvc-12.0 address-model=64
     - ARGS: --toolset=msvc-14.0 address-model=64
+    - ARGS: --toolset=msvc-12.0 address-model=64 cxxflags=-clr asynch-exceptions=on
+    - ARGS: --toolset=msvc-14.0 address-model=64 cxxflags=-clr asynch-exceptions=on
     - ARGS: --toolset=msvc-14.0 address-model=64 cxxflags=-std:c++latest
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       ARGS: --toolset=msvc-14.1 address-model=64
@@ -30,6 +34,10 @@ environment:
       ARGS: --toolset=msvc-14.1 address-model=32
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       ARGS: --toolset=msvc-14.1 address-model=64 cxxflags=-std:c++latest
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      ARGS: --toolset=msvc-14.1 address-model=64 cxxflags=-clr asynch-exceptions=on
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      ARGS: --toolset=msvc-14.1 address-model=32 cxxflags=-clr asynch-exceptions=on
     - ARGS: --toolset=gcc address-model=64
       PATH: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%
     - ARGS: --toolset=gcc address-model=64 cxxflags=-std=gnu++1z
