Travis: Add Xcode 9.1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -230,6 +230,10 @@ matrix:
     - os: osx
       env: TOOLSET=clang COMPILER=clang++ CXXSTD=03,11,14,1z
       osx_image: xcode9.4
+      # 9.1 fails some tests that pass on 9.4:
+    - os: osx
+      env: TOOLSET=clang COMPILER=clang++ CXXSTD=03,11,14,1z
+      osx_image: xcode9.1
 
     - os: osx
       env: TOOLSET=clang COMPILER=clang++ CXXSTD=03,11,14,1z
