msvc/arm: Fix for https://github.com/boostorg/type_traits/issues/105

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,6 +41,8 @@ environment:
       ARGS: --toolset=msvc-14.1 address-model=64 cxxflags=-clr asynch-exceptions=on
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       ARGS: --toolset=msvc-14.1 address-model=32 cxxflags=-clr asynch-exceptions=on
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      ARGS: --toolset=msvc-14.1 architecture=arm is_member_func_test testing.launcher=null_runner
     - ARGS: --toolset=gcc address-model=64
       PATH: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%
     - ARGS: --toolset=gcc address-model=64 cxxflags=-std=gnu++1z
