is_function_cxx_11.hpp: There's no __fastcall on clr. Update for noexcept functions, also updates CI script to test C++17 as that's required to trigger the error. Fixes: https://github.com/boostorg/type_traits/pull/124.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,9 +38,9 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       ARGS: --toolset=msvc-14.1 address-model=64 cxxflags=-std:c++latest
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      ARGS: --toolset=msvc-14.1 address-model=64 cxxflags=-clr asynch-exceptions=on
+      ARGS: --toolset=msvc-14.1 cxxstd=17 address-model=64 cxxflags=-clr asynch-exceptions=on
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      ARGS: --toolset=msvc-14.1 address-model=32 cxxflags=-clr asynch-exceptions=on
+      ARGS: --toolset=msvc-14.1 cxxstd=17 address-model=32 cxxflags=-clr asynch-exceptions=on
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       ARGS: --toolset=msvc-14.1 architecture=arm testing.execute=off
       DISABLE_CONFIG_INFO: "YES"
