--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ os:
   - linux
   - osx
 
+dist : xenial
+
 branches:
   only:
     - master
@@ -159,7 +161,7 @@ matrix:
             - clang-3.5
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.5
+            - llvm-toolchain-xenial-3.5
 
     - os: linux
       env: TOOLSET=clang COMPILER=clang++-3.6 CXXSTD=03,11
@@ -169,7 +171,7 @@ matrix:
             - clang-3.6
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
+            - llvm-toolchain-xenial-3.6
 
     - os: linux
       env: TOOLSET=clang COMPILER=clang++-3.7 CXXSTD=03,11
@@ -179,7 +181,7 @@ matrix:
             - clang-3.7
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
+            - llvm-toolchain-xenial-3.7
 
     - os: linux
       env: TOOLSET=clang COMPILER=clang++-3.8 CXXSTD=03,11,14,1z
@@ -189,7 +191,7 @@ matrix:
             - clang-3.8
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.8
+            - llvm-toolchain-xenial-3.8
 
     - os: linux
       env: TOOLSET=clang COMPILER=clang++-3.9 CXXSTD=03,11,14,1z
@@ -199,7 +201,7 @@ matrix:
             - clang-3.9
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.9
+            - llvm-toolchain-xenial-3.9
 
     - os: linux
       compiler: clang++-4.0
@@ -233,6 +235,17 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-6.0
+
+    - os: linux
+      compiler: clang++-7
+      env: TOOLSET=clang COMPILER=clang++-7 CXXSTD=03,11,14,1z
+      addons:
+        apt:
+          packages:
+            - clang-7
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-7
 
     - os: osx
       env: TOOLSET=clang COMPILER=clang++ CXXSTD=03,11,14,1z
