--- a/.travis.yml
+++ b/.travis.yml
@@ -316,7 +316,7 @@ matrix:
       env: CMAKE=1
       script:
         - mkdir __build__ && cd __build__
-        - cmake -DBOOST_ENABLE_CMAKE=1 -DBoost_VERBOSE=1 ..
+        - cmake -DBOOST_ENABLE_CMAKE=1 -DBoost_VERBOSE=1 -DBOOST_INCLUDE_LIBRARIES=type_traits ..
         - ctest --output-on-failure -R boost_type_traits
 
 
