--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -289,7 +289,7 @@ jobs:
         run: config_info_travis
         working-directory: ../boost-root/libs/config/test
       - name: Test
-        run: ..\..\..\b2 cxxstd=${{ matrix.standard }} toolset=gcc
+        run: ..\..\..\b2 --hash cxxstd=${{ matrix.standard }} toolset=gcc
         working-directory: ../boost-root/libs/type_traits/test
   windows_msvc_14_0:
     runs-on: windows-latest
@@ -333,7 +333,7 @@ jobs:
         run: config_info_travis
         working-directory: ../boost-root/libs/config/test
       - name: Test
-        run: ..\..\..\b2 cxxstd=${{ matrix.standard }} toolsettoolset=msvc-14.0
+        run: ..\..\..\b2 --hash cxxstd=${{ matrix.standard }} toolset=msvc-14.0
         working-directory: ../boost-root/libs/type_traits/test
   windows_msvc_14_2:
     runs-on: windows-latest
@@ -377,5 +377,5 @@ jobs:
         run: config_info_travis
         working-directory: ../boost-root/libs/config/test
       - name: Test
-        run: ..\..\..\b2 cxxstd=${{ matrix.standard }} toolsettoolset=msvc-14.2
+        run: ..\..\..\b2 --hash cxxstd=${{ matrix.standard }} toolset=msvc-14.2
         working-directory: ../boost-root/libs/type_traits/test
